# isow

./: .editorconfig  .gitignore  CODE-OF-CONDUCT.md  CODE_OF_CONDUCT.md  Cargo.toml  Changelog.md  Package.resolved  Package.swift  README.md  appveyor.yml  travis.yml
.github/workflows/: rust.yml
.zed/: tasks.json
Sources/IsoWeek/: IsoWeek.swift
Tests/IsoWeekTests/: IsoWeekTests.swift
src/: flags.rs  isow.yml  lib.rs  main.rs  options.rs  patcher.rs
