[package]
name = "isow"
version = "0.2.10"
authors = ["Anthony Foxclaw"]
edition = "2018"
repository = "https://github.com/tonytins/isow"
license = "MPL-2.0"
description = """
Prints the local or utc week in the ISO 8601 format, e.g. 2006-W52-7.
"""
readme = "README.md"
keywords = ["finance", "week", "iso", "iso-week"]
categories = ["command-line-utilities", "date-and-time"]

[badges]
appveyor = { repository = "tonytins/isow", branch = "master" }
travis-ci = { repository = "tonytins/isow", branch = "master" }
codecov = { repository = "tonytins/isow", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0"
chrono = "0.4"
isodate = { git = "https://github.com/tonytins/isodate", version = "0.1.0" }
self_update = { version = "0.11", optional = true }
clap = { version = "2.33", features = [ "yaml", "wrap_help" ] }

[features]
updater = ["self_update"]