[package]
name = "isow"
version = "0.2.106-beta1"
authors = ["Tony Bark"]
edition = "2021"
repository = "https://github.com/tonytins/isow"
license = "MPL-2.0"
readme = "README.md"
keywords = ["finance", "week", "iso-8601", "iso-week"]
categories = ["command-line-utilities", "date-and-time"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
rbtag = "0.3"
isocal = "0.1"
self_update = { version = "0.11", optional = true }
clap = { version = "3.0.0-beta.1", features = [ "wrap_help" ] }

[features]
updater = ["self_update"]